--- a/concord/pyproject.toml
+++ b/concord/pyproject.toml
@@ -11,6 +11,8 @@ uvicorn = "^0.11.5"
 numpy = "^1.19.0"
 scipy = "^1.5.1"
 pyconcord = "^0.3"
+pandas = "^1.0.5"
+scalene = "^0.9.13"
 
 
 [tool.poetry.dev-dependencies]
