--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,11 +13,13 @@ scipy = "^1.5.1"
 pyconcord = "^0.3"
 pandas = "^1.0.5"
 scalene = "^0.9.13"
-
+requests = "^2.25.0"
+humps = "^0.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.3"
 requests = "^2.24.0"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
