--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,5 @@ RUN apt update && apt install -y curl &&\
 COPY ./pyproject.toml ./app/poetry.lock* /app/
 
 RUN poetry install --no-root --no-dev
-
-COPY ./src/ /app/
-COPY ./data/ /app/
+WORKDIR /app/
+COPY ./src/ /app/src/
