--- a/concord/pyproject.toml
+++ b/concord/pyproject.toml
@@ -17,6 +17,18 @@ pandas = "^1.0.5"
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.3"
 requests = "^2.24.0"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.tox]
+legacy_tox_ini = """
+
+[tox]
+envlist = py38
+
+[testenv]
+deps = pytest >= 3.0.0, <4
+commands = pytest
+"""
