--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,21 @@ services:
       - new
     build: backend
     volumes:
-      - ./backend/src:/app
+      - ./backend/src:/app/src/
     entrypoint: /start-reload.sh
     environment:
-      WORKERS_PER_CORE: 1
+      MODULE_NAME: src.main
     ports:
       - "8000:80"
-  middleware:
+  concord:
     networks: 
       - new
     build: concord
     volumes:
-      - ./concord/src:/app
+      - ./concord/src:/app/src/
     entrypoint: /start-reload.sh
+    environment:
+      MODULE_NAME: src.main
     ports:
       - "8001:80"
 
