--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ default_language_version:
     python: python3.8
 repos:
 -   repo: https://github.com/psf/black
-    rev: 20.8b1
+    rev: stable
     hooks:
       - id: black
 -   repo: https://github.com/timothycrosley/isort
@@ -10,8 +10,7 @@ repos:
     hooks:
       - id: isort
         name: isort (python)
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+-   repo: https://gitlab.com/pycqa/flake8
+    rev: 3.7.9
     hooks:
-    -   id: check-yaml
-    -   id: trailing-whitespace
+    - id: flake8
