--- a/concord/pyproject.toml
+++ b/concord/pyproject.toml
@@ -12,7 +12,7 @@ numpy = "^1.19.0"
 scipy = "^1.5.1"
 requests = "^2.24.0"
 pandas = "^1.0.5"
-
+alembic = "^1.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.3"
@@ -22,13 +22,3 @@ requests = "^2.24.0"
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
-[tool.tox]
-legacy_tox_ini = """
-
-[tox]
-envlist = py38
-
-[testenv]
-deps = pytest >= 3.0.0, <4
-commands = pytest
-"""
