--- a/concord/pyproject.toml
+++ b/concord/pyproject.toml
@@ -13,6 +13,8 @@ scipy = "^1.5.1"
 requests = "^2.24.0"
 pandas = "^1.0.5"
 alembic = "^1.4.3"
+psycopg2 = "^2.8.6"
+SQLAlchemy = "^1.4.0b1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.3"
