--- a/concord/pyproject.toml
+++ b/concord/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "concord-middleware"
+name = "concord"
 version = "0.1.0"
 description = "API for using concord"
 authors = ["matzhaugen <matzhaugen@gmail.com>"]
@@ -12,9 +12,10 @@ numpy = "^1.19.0"
 scipy = "^1.5.1"
 requests = "^2.24.0"
 pandas = "^1.0.5"
-alembic = "^1.4.3"
-SQLAlchemy = "^1.4.0b1"
 psycopg2-binary = "^2.8.6"
+alembic = "^1.4.3"
+sqlalchemy = "^1.3.20"
+importlib-metadata = "^3.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.3"
