--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,27 @@
 default_language_version:
-    python: python3.8
+  python: python3.8
 repos:
--   repo: https://github.com/psf/black
-    rev: 20.8b1
-    hooks:
-      - id: black
--   repo: https://github.com/timothycrosley/isort
-    rev: 5.6.4
-    hooks:
-      - id: isort
-        name: isort (python)
+- hooks:
+  - id: black
+  repo: https://github.com/psf/black
+  rev: 20.8b1
+- hooks:
+  - id: isort
+    name: isort
+  repo: https://github.com/timothycrosley/isort
+  rev: 5.6.4
+- hooks:
+  - id: populate-mypy-pre-commit
+    name: mypy-prepopulate
+  repo: https://github.com/cognitedata/populate-mypy-pre-commit
+  rev: v2.0
+- hooks:
+  - additional_dependencies: []
+    files: ^backend/
+    id: mypy
+    name: mypy (server)
+  - files: ^concord/
+    id: mypy
+    name: mypy (client)
+  repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v0.790
