--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     volumes:
       - ./concord/src:/app/src/
       - ./concord/scripts/prestart.sh:/app/prestart.sh
+      - ./concord/scripts/rundev.py:/app/rundev.py
     entrypoint: /start-reload.sh
     environment:
       MODULE_NAME: src.main
@@ -31,8 +32,6 @@ services:
       - new
     image: postgres:12
     restart: always
-    volumes:
-      - db_data:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: postgrespassword
       POSTGRES_HOST_AUTH_METHOD: trust
@@ -56,8 +55,6 @@ services:
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       ## uncomment next line to set an admin secret
       # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
-volumes:
-  db_data:
 networks:
   new:
 # volumes:
