--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     ports:
       - "80:80"
   postgres:
+    volumes:
+      - ./concord/src/flatData.csv:/flatData.csv
     networks: 
       - new
     image: postgres:12
