--- a/concord/pyproject.toml
+++ b/concord/pyproject.toml
@@ -16,6 +16,7 @@ psycopg2-binary = "^2.8.6"
 alembic = "^1.4.3"
 sqlalchemy = "^1.3.20"
 importlib-metadata = "^3.1.1"
+aiohttp = "^3.7.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.3"
