--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,15 @@
 version: '3.8'
 services:
+  of-backend:
+    networks:
+      - new
+    build: build/of-concord
+    ports:
+      - "5001:5000"
+    volumes:
+      - ./build/of-concord/function:/home/app/function/
   backend:
-    networks: 
+    networks:
       - new
     build: backend
     volumes:
@@ -24,6 +32,7 @@ services:
     environment:
       MODULE_NAME: src.main
       BACKEND_URL: http://backend:81
+      OPENFAAS_URL: http://of-backend:5000
       SQL_ALCHEMY_DB_URI: postgresql://postgres:postgrespassword@postgres:5432/postgres
     ports:
       - "80:80"
