--- a/concord/pyproject.toml
+++ b/concord/pyproject.toml
@@ -17,6 +17,7 @@ alembic = "^1.4.3"
 sqlalchemy = "^1.3.20"
 importlib-metadata = "^3.1.1"
 aiohttp = "^3.7.3"
+ujson = "^4.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.3"
