--- a/manifests/openfaas.yml
+++ b/manifests/openfaas.yml
@@ -982,28 +982,6 @@ metadata:
     component: faas-controller
     heritage: Helm
     release: openfaas
-  name: openfaas-profiles
-  namespace: "openfaas"
-rules:
-  - apiGroups:
-      - "openfaas.com"
-    resources:
-      - "profiles"
-    verbs:
-      - "get"
-      - "list"
-      - "watch"
----
-# Source: openfaas/templates/controller-rbac.yaml
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  labels:
-    app: openfaas
-    chart: openfaas-6.2.2
-    component: faas-controller
-    heritage: Helm
-    release: openfaas
   name: openfaas-controller
   namespace: "openfaas-fn"
 rules:
@@ -1053,6 +1031,28 @@ rules:
       - get
       - list
       - watch
+---
+# Source: openfaas/templates/controller-rbac.yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  labels:
+    app: openfaas
+    chart: openfaas-6.2.2
+    component: faas-controller
+    heritage: Helm
+    release: openfaas
+  name: openfaas-profiles
+  namespace: "openfaas"
+rules:
+  - apiGroups:
+      - "openfaas.com"
+    resources:
+      - "profiles"
+    verbs:
+      - "get"
+      - "list"
+      - "watch"
 ---
 # Source: openfaas/templates/prometheus-rbac.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -1512,7 +1512,7 @@ metadata:
   name: gateway
   namespace: "openfaas"
 spec:
-  replicas: 1
+  replicas: 4
   selector:
     matchLabels:
       app: gateway
@@ -1562,7 +1562,7 @@ spec:
         - name: functions_provider_url
           value: "http://127.0.0.1:8081/"
         - name: direct_functions
-          value: "false"
+          value: "true"
         - name: direct_functions_suffix
           value: "openfaas-fn.svc.cluster.local"
         - name: function_namespace
@@ -1844,4 +1844,4 @@ metadata:
 data:
   basic-auth-user: "YWRtaW4="
   # kubectl -n openfaas get secret basic-auth -o jsonpath="{.data.basic-auth-password}" | base64 --decode
-  basic-auth-password: "TEYwVDF0SHRXUkxW"
+  basic-auth-password: "R2U4Nk5rQ3dyV1ZY"
