try k8s service and starlette

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.8'
 services:
-  of-backend:
+  starlette-backend:
     networks:
       - new
-    build: build/of-concord
+    image: starlette
     ports:
-      - "5001:5000"
+      - "5001:8000"
     volumes:
-      - ./of-concord/handler.py:/home/app/function/handler.py
-      - ./template/python3-http-concord/index.py:/home/app/index.py
+      - ./starlette-backend:/app
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--workers", "4"]
   backend:
     networks:
       - new
@@ -33,7 +33,8 @@ services:
     environment:
       MODULE_NAME: src.main
       BACKEND_URL: http://backend:81
-      OPENFAAS_URL: http://of-backend:5000
+      OPENFAAS_URL: http://of-backend:000
+      STARLETTE_BACKEND_URL: http://starlette-backend:8000
       SQL_ALCHEMY_DB_URI: postgresql://postgres:postgrespassword@postgres:5432/postgres
     ports:
       - "80:80"
