--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,24 +3,13 @@ services:
   starlette-backend:
     networks:
       - new
-    image: starlette
+    build: starlette-backend
     ports:
       - "5001:8000"
     volumes:
       - ./starlette-backend:/app
-    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--workers", "4"]
-  backend:
-    networks:
-      - new
-    build: backend
-    volumes:
-      - ./backend/src:/app/src/
-    entrypoint: /start-reload.sh
-    environment:
-      PORT: "81"
-      MODULE_NAME: src.main
-    ports:
-      - "81:81"
+    # command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--workers", "4"]
+    command: ["gunicorn", "main:app", "--bind", "0.0.0.0:8000", "--workers", "4", "-k", "uvicorn.workers.UvicornWorker"]
   concord:
     networks:
       - new
@@ -32,8 +21,7 @@ services:
     entrypoint: /start-reload.sh
     environment:
       MODULE_NAME: src.main
-      BACKEND_URL: http://backend:81
-      OPENFAAS_URL: http://of-backend:000
+      OPENFAAS_URL: http://starlette-backend:8000
       STARLETTE_BACKEND_URL: http://starlette-backend:8000
       SQL_ALCHEMY_DB_URI: postgresql://postgres:postgrespassword@postgres:5432/postgres
     ports:
