--- a/manifests/dev/dev.yaml
+++ b/manifests/dev/dev.yaml
@@ -51,17 +51,12 @@ spec:
       - env:
         - name: POSTGRES_HOST_AUTH_METHOD
           value: trust
-        image: postgres:12
+        image: matzhaugen/concord-db:latest
         name: db
         ports:
         - containerPort: 5432
           name: db-connection
           protocol: TCP
-        volumeMounts:
-        - mountPath: /flatData.csv
-          name: local-repo
-          readOnly: true
-          subPath: concord/src/flatData.csv
       - command:
         - /start-reload.sh
         env:
@@ -81,37 +76,24 @@ spec:
           value: "1"
         - name: PYTHONIOENCODING
           value: UTF-8
-        image: matzhaugen/concord:latest
+        image: matzhaugen/concord:1
+        imagePullPolicy: Always
         name: concord
         ports:
         - containerPort: 80
           name: api
-        volumeMounts:
-        - mountPath: /app/src/
-          name: local-repo
-          readOnly: true
-          subPath: concord/src/
       - command:
-        - /start-reload.sh
-        env:
-        - name: PORT
-          value: "81"
-        - name: MODULE_NAME
-          value: src.main
+        - uvicorn
+        - main:app
+        - --host
+        - 0.0.0.0
+        - --workers
+        - "4"
         image: matzhaugen/starlette-backend:latest
-        name: backend
+        name: starlette-backend
         ports:
-        - containerPort: 81
+        - containerPort: 8000
           name: api
-        volumeMounts:
-        - mountPath: /app/
-          name: local-repo
-          readOnly: true
-          subPath: starlette-backend/
-      volumes:
-      - hostPath:
-          path: /concord-fastapi
-        name: local-repo
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -143,15 +125,6 @@ spec:
         ports:
         - containerPort: 8000
           name: api
-        readOnly: true
-        subPath: starlette-backend/
-        volumeMounts:
-        - mountPath: /app/
-          name: local-repo
-      volumes:
-      - hostPath: null
-        name: local-repo
-        path: /concord-fastapi
 ---
 apiVersion: getambassador.io/v2
 kind: Mapping
@@ -162,26 +135,3 @@ spec:
   prefix: /
   service: concord:80
   timeout_ms: 40000
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: local-repo
-spec:
-  accessModes:
-  - ReadWriteOnce
-  capacity:
-    storage: 1Gi
-  local:
-    path: /Users/matzhaugen/projects/concord-fastapi/concord-fastapi
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - pool-wi7gvdp4c-3vi34
-  persistentVolumeReclaimPolicy: Delete
-  storageClassName: local-storage
-  volumeMode: Filesystem
