--- a/manifests/dev/kustomization.yaml
+++ b/manifests/dev/kustomization.yaml
@@ -1,14 +1,11 @@
 bases:
 - ../base
 
-resources:
-- local-repo.yaml
-
 images:
+- name: DOCKER_REGISTRY/concord-db
+  newName: matzhaugen/concord-db
 - name: DOCKER_REGISTRY/concord
   newName: matzhaugen/concord
+  newTag: "1"
 - name: DOCKER_REGISTRY/starlette-backend
   newName: matzhaugen/starlette-backend
-
-patchesStrategicMerge:
-- patch.yaml
