--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,21 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "@smui/button": "^1.1.0",
+    "@smui/chips": "^1.1.0",
+    "@smui/list": "^1.1.0",
+    "@smui/textfield": "^1.1.0",
+    "postcss": "^8.2.1",
     "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.0.0",
+    "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sass": "^1.30.0",
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "framework7-svelte": "^5.7.14",
     "sirv-cli": "^1.0.0"
   }
 }
