--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@smui/chips": "^1.1.0",
     "@smui/list": "^1.1.0",
     "@smui/textfield": "^1.1.0",
+    "fusioncharts": "^3.16.0",
     "postcss": "^8.2.1",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
@@ -21,7 +22,8 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sass": "^1.30.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-fusioncharts": "^1.0.0"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
