--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
   - id: black
   repo: https://github.com/psf/black
   rev: 20.8b1
+  args: ["--line-length 123"]
 - hooks:
   - id: isort
     name: isort
