--- a/concord/pyproject.toml
+++ b/concord/pyproject.toml
@@ -18,6 +18,8 @@ sqlalchemy = "^1.3.20"
 importlib-metadata = "^3.1.1"
 aiohttp = "^3.7.3"
 ujson = "^4.0.1"
+boto3 = "^1.16.51"
+pgcopy = "^1.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.3"
